# msf-simulation-pipeline

./: README.md  pyproject.toml
background_cocktails/: README.md
configs/: config-base.yaml  config-ilreco-2026-07.yaml  config-msf-26-07-background.yaml  config-msf-26-07.yaml  config-msf.yaml  config-off-26-06.yaml  config-off.yaml
csv_convert/: .gitignore  CMakeLists.txt  README.md  edm4eic_calo_clusters.cxx  edm4eic_comb_candidates.cxx  edm4eic_lambda_acceptance.cxx  edm4eic_mc_dis.cxx  edm4eic_mc_particles.cxx  edm4eic_mcpart_lambda.cxx  edm4eic_reco_dis.cxx  edm4eic_reco_ff_lambda.cxx  edm4eic_reco_particles.cxx  edm4eic_trk_hits.cxx  edm4hep_acceptance_npi0.cxx  edm4hep_acceptance_ppim.cxx  edm4hep_combinatorics_ppim.cxx
simulation_pipeline/: 01_root_hepmc_klam_convert.py  10_create_afterburner_jobs.py  11_create_background_jobs.py  20_create_npsim_jobs.py  21_create_npsim_saveall_jobs.py  22_create_npsim_background_jobs.py  30_create_eicrecon_jobs.py  40_csv_convert.py  50_create_analysis_jobs.py  51_create_root_analysis_jobs.py  90-create-emcal-profile-jobs.py  __init__.py  csv_stage.py  datasets.py  generate_datasets.py  job_creator.py  rucio.py
simulation_pipeline/stages/: 10_create_afterburner_jobs.py  11_create_background_jobs.py  20_create_npsim_jobs.py  21_create_npsim_saveall_jobs.py  22_create_npsim_background_jobs.py  30_create_eicrecon_jobs.py  40_create_csv_dd4hep_jobs.py  41_create_csv_eicrecon_jobs.py  50_create_analysis_jobs.py  51_create_root_analysis_jobs.py  __init__.py
